<fix>[optional_scope]: <clean up whitespace at bottom of page>
[optional_body]

[optional_footer]

--- a/src/style.css
+++ b/src/style.css
@@ -65,7 +65,7 @@ body > * {
     text-align: center;
     padding: 1em 0;
     width: 75vw;
-    height: 100vh;
+    /* height: 100vh; */
     border: 1px solid rgba(250, 128, 114, 0.932);
     background: linear-gradient(0deg, rgba(106, 52, 52, 0.535) 50%, rgba(0, 0, 0, 0) 100%);
     display: grid;
@@ -100,7 +100,7 @@ img {
 }
 
 .img-bar {
-    height: 100%;
+    /* height: 100%; */
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr;
